# romaji2kana

./: .gitignore  CMakeLists.txt  README.md  romaji2kana.sln
romaji2kana/: Source.c  restrict.h  romaji2kana.c  romaji2kana.h  romaji2kana.vcxproj  romaji2kana.vcxproj.filters
